fixed card images

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
              </div>
            <!-- card-5 -->
            <div class=" text-center">
-            <img class="mx-auto" src="./images/Divorce.png" alt="">
+            <img class="mx-auto" src="./images/divorce.png" alt="">
               <h3 class="eb font-extrabold text-[32px] text-[#414040] mt-8">Divorce Law</h3>
               <p class="font-medium text-[#707070] mt-6 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
               <img class="mx-auto" src="./images/Frame.png" alt="">
@@ -381,7 +381,7 @@
                 type="text"
                 placeholder="username@site.com"
                 class="input input-bordered join-item  " />
-              <button class="btn bg-btn-primary join-item">Subscribe</button>
+              <button class="btn bg-btn-primary gitgjoin-item">Subscribe</button>
             </div>
           </fieldset>
         </form>
